# cal-ff

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
cacafo/: api.py  building_relationships.py  check.py  cli.py  constants.py  csv_gen.py  data.py  dataloop.py  export.py  facilities.py  frontend.py  geom.py  jobs.py  multiplicity.py  naip.py  owner_name_matching.py  paper.py  query.py  recall.py  reports.py  transform.py  urban_mask.py  vis.py
cacafo/archive/: jobs.py  models.py  paper.py  reports.py
cacafo/cluster/: __init__.py  building_threshold_relationship_query.sql  buildings.py  exclude_overlapping.py  permits.py
cacafo/data/: ingest.py  jobs.py  join.py  source.py
cacafo/db/: models.py  sa_models.py  session.py
cacafo/db/migrations/: env.py
cacafo/db/migrations/versions/: 019bf23a459e_make_model_score_nullable.py  02d9f04f4f98_remove_duplicate_facility_id_col.py  0b2b6b999f8d_remove_image_fields.py  0ef218f34b33_make_col_name_consistent.py  11b0f16a508a_add_labeled_facility_uuid_col_to_animal_.py  192f3496fcd8_make_geometry_multipoly_actually.py  23b2c2b7400f_make_construction_dates_nullable.py  27bb77c3c7df_rename_model_score_to_bucket.py  2cb7464cdb45_fix_hash_uniqueness.py  3014b96c651b_make_census_block_polygon_instead_of_.py  310017c371fa_add_distinct_permit_parcels_and_.py  32813a3035af_rename_model_score_to_bucket.py  460e97ce76c5_add_facility_links.py  52f722e78213_add_census_block.py  561356cf9e96_add_data_field_to_annotation.py  6a14adc49f24_create_urban_mask_table.py  72a2552e913f_dd_hash_field_to_cafoannotation.py  76ebec8d7ca9_create_irr_annotation.py  7b1f9568c926_add_census_block_id_to_building.py  834738812144_geometry_geography.py  861144fdf6d4_add_parcel_number_and_constraint.py  8676955b34f6_add_annotation_source_to_cafo_annotation.py  8d77730da18d_add_unique_hash_to_building.py  903db37f6b99_fix_parcel_owner_relationship_.py  9206d9619013_make_county_multipolygon.py  95cb830a9723_make_uace_nullable.py  9687e225fdc9_give_building_annotation_id.py  98329c0ff1fa_add_all_new_tables.py  9ff85ca9c925_add_unique_to_image_annotaiton_data.py  baed2eafee82_add_county_and_group.py  c1939dbebc90_add_unique_to_image_annotation.py  d220983772a4_add_label_reason_to_iamge.py  d2ae0ed484e2_add_image_annotation.py  db5b12970288_make_weight_nullable.py  dd6d924a7d8d_remove_image_fkey_make_parcel_nullable.py  df12e8368dc7_add_archived_at_field.py  eb0e00cdb897_switch_to_general_geometry_type.py  ed67141d86c2_make_county_id_nullable.py  f90e1621815b_add_extra_fields_to_animal_typing.py  fd3fcae5965a_add_annotated_by_field_to_cafo_.py  (+1 more)
cacafo/paper/: __init__.py  constants.py  plot.py
cacafo/stats/: irr.py  irr_calculations.py  population.py  recall.py
